--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "torchvision>=0.24.0",
     "datasets>=4.2.0",
     "transformers>=4.57.1",
+    "huggingface-hub>=0.35.3",
+    "hf-xet>=1.1.10",
 ]
 
 [[tool.uv.index]]
