--- a/.gitignore
+++ b/.gitignore
@@ -546,3 +546,10 @@ logs/miscellaneous
 szakmgy1u0um23zm_0.pdf
 
 
+/github
+/logs
+QuantizedNeuralCollapse.zip
+/latex
+linguistic-collapse-master.zip
+/out
+/papers
