--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "huggingface-hub>=0.35.3",
     "hf-xet>=1.1.10",
     "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
+    "notebook>=7.5.0",
+    "pandas-stubs==2.3.3.251201",
 ]
 
 [[tool.uv.index]]
